[project]
name = "blurp"
version = "0.1.0"
description = "The versatile anime discord bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "lemminflect>=0.2.3",
    "nekosbest>=1.1.13",
    "openai>=1.82.0",
    "py-cord>=2.6.1",
    "python-dotenv>=1.1.0",
]
